<resources>
    <string name="app_name">Project1</string>
    <string name="greeting">Hello %1$s %2$s, you are in!</string>

    <string name="loginBtn">Login</string>
    <string name="registrationBtn">Register</string>

    <string name="login">Sign in</string>
    <string name="register">Sign up</string>

    <string name="loginHint">Enter your login</string>
    <string name="passwordHint">Enter your password</string>

    <string name="notRegistered">Not registered yet?</string>
    <string name="alreadyRegistered">Already registered?</string>
</resources>
