<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    >

    <ImageView
        android:id="@+id/background"
        android:layout_width="fill_parent"
        android:layout_marginLeft="-315dp"
        android:layout_height="fill_parent"
        android:src="@drawable/login_background"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_marginBottom="200dp"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorBlack"
            android:textSize="36dp"/>

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/loginHint"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/passwordHint"
            />
        <TextView
            android:id="@+id/notRegistered"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notRegistered"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="@dimen/marginBottom"
            />
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_bg"
            android:text="@string/loginBtn"
            android:textSize="28sp"
            />
    </LinearLayout>

</FrameLayout>