<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login"
    >

    <ImageView
        android:id="@+id/background2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/registeration_background"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/colorBlack"
            android:textSize="36sp"/>

        <EditText
            android:id="@+id/registrationLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/loginHint"
            />

        <EditText
            android:id="@+id/registrationPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/passwordHint"
            />
        <EditText
            android:id="@+id/registrationPasswordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/passwordHint"
            />
        <TextView
            android:id="@+id/haveAccount"
            android:clickable="true"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadyRegistered"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="@dimen/marginBottom"
            />
        <Button
            android:id="@+id/registrationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_bg"
            android:text="@string/registrationBtn"
            android:textSize="28sp"
            />
    </LinearLayout>

</FrameLayout>